--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-    <meta name="google-site-verification" content="your-verification-code" />
-    <meta http-equiv="refresh" content="0; url=https://www.myminifactory.com/users/nicholashoult">
+
+    <meta http-equiv="refresh" content="0; url=https://thebigblogs.com/free-government-tablet-program-bridging-the-digital-divide/">
     <title>Redirecting...</title>
 </head>
 <body>
